* fixed wrong sized items on action drop menus * fixed browser share button display and sizing

--- a/bookface_light_userstyles.css
+++ b/bookface_light_userstyles.css
@@ -746,7 +746,7 @@
             display: inline-block  !important;
        }
 		/* ACTION BUTTON LABELS */
-		.wall-item-actions-row button,
+		.wall-item-actions-row button:not(.button-browser-share),
 		.wall-item-actions-right button {
 		    position: relative !important;
 			display: block !important;
@@ -1133,6 +1133,13 @@
 			font-size: 20px !important;
 			position: relative !important;
 			top: 1px !important;
+		}
+		.wall-item-actions ul button,
+    	.wall-item-actions ul a {
+			font-size: 14px !important;
+			color: inherit !important;
+			line-height: 14px !important;
+			margin: 0 !important;
 		}
 		/* little vcard when you scroll down on profiles */
 		#vcard-short-photo-wrapper img, 
@@ -1984,6 +1991,9 @@ a.tag.label,
 		color: transparent !important;
 	}
 	/* NOTE: cannot simply empty or display none or button alignment gets messed up! */
+	.wall-item-actions-row .button-browser-share::after {
+		display: none !important;
+	}
 }
 /* 	Narrow Screen Phones in Landscape Orientation
 	==============================================
